# ublkpp

./: .codecov.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  apply-clang-format.sh  conanfile.py  gcovr.cfg  prepare.sh  prepare_v2.sh  sonar-project.properties  tsan.supp
.claude/: CLAUDE.md
src/: CMakeLists.txt
src/driver/: CMakeLists.txt  fs_disk.cpp  fs_disk_impl.hpp  homeblk_disk.cpp  homeblk_disk.hpp  iscsi_disk.cpp
src/driver/tests/: CMakeLists.txt  iscsi_tgtd_setup.sh  test_fs_disk_impl.cpp  test_fsdisk.cpp  test_iscsi_disk.cpp
src/include/ublkpp/: ublkpp.hpp
src/include/ublkpp/drivers/: fs_disk.hpp  iscsi_disk.hpp
src/include/ublkpp/lib/: common.hpp  sub_cmd.hpp  ublk_disk.hpp
src/include/ublkpp/raid/: raid0.hpp  raid1.hpp
src/lib/: CMakeLists.txt  common.hpp  logging.cpp  logging.hpp  resync_dispatch.hpp  ublk_disk.cpp  ublk_disk_metrics.cpp  ublk_disk_metrics.hpp  ublkpp_metrics_utilities.cpp  ublkpp_metrics_utilities.hpp
src/lib/internal/: ublkpp_int.hpp
src/lib/tests/: CMakeLists.txt  test_cqe_state.cpp  test_logging.cpp
src/metrics/: CMakeLists.txt  ublk_fsdisk_metrics.cpp  ublk_fsdisk_metrics.hpp  ublk_io_metrics.cpp  ublk_io_metrics.hpp  ublk_raid_metrics.cpp  ublk_raid_metrics.hpp
src/raid/: CMakeLists.txt  bitmap.cpp  bitmap.hpp  raid0.cpp  raid0_impl.hpp  raid1.cpp  raid1_impl.hpp  superblock.hpp
src/raid/md/: CMakeLists.txt  md_disk.cpp  md_disk.hpp  md_superblock.cpp  md_superblock.hpp
src/raid/md/tests/: CMakeLists.txt  md_test.cpp  test_md_common.hpp
src/raid/raid0/: CMakeLists.txt  raid0.cpp  raid0_impl.hpp
src/raid/raid0/tests/: CMakeLists.txt  device_probe.cpp  device_probe_differ.cpp  discard_merge.cpp  discard_retry.cpp  memory_estimation.cpp  open_devices.cpp  raid0_impl_tests.cpp  split_retry.cpp  split_write.cpp  test_raid0_common.hpp
src/raid/raid0/tests/async/: CMakeLists.txt  async_raid0_common.hpp  discard.cpp  error.cpp  flush.cpp  read_write.cpp
src/raid/raid0/tests/asyncio/: CMakeLists.txt  async_raid0_common.hpp  error.cpp  read_write.cpp
src/raid/raid0/tests/raid0/: device_probe_differ.cpp  discard_merge.cpp  split_write.cpp  test_raid0_common.hpp
src/raid/raid0/tests/simple/: CMakeLists.txt  discard.cpp  error_handling.cpp  flush.cpp  get_device.cpp  idle_and_collect.cpp  read.cpp  syncio.cpp  write.cpp
src/raid/raid0/tests/superblock/: CMakeLists.txt  init_issues.cpp  wrong_uuid.cpp
src/raid/raid1/: CMakeLists.txt  bitmap.cpp  bitmap.hpp  lock-free-read-retry.txt  raid1.cpp  raid1_avail_probe.cpp  raid1_avail_probe.hpp  raid1_impl.hpp  raid1_pimpl.cpp  raid1_resync_task.cpp  raid1_resync_task.hpp  raid1_superblock.cpp  raid1_superblock.hpp  region_tracker.hpp  resync_constants.hpp  resync_cursor.hpp  super_bitmap.cpp  super_bitmap.hpp
src/raid/raid1/tests/: CMakeLists.txt  device_probe.cpp  device_probe_differ.cpp  device_probe_exceed.cpp  discard_retry_large.cpp  double_retry.cpp  raid1_test.cpp  read_degraded.cpp  read_failover.cpp  read_retry.cpp  read_retry_deva.cpp  retry_deva.cpp  retry_failure_deva.cpp  test_raid1_common.hpp  unknown_op.cpp  write_fail.cpp  write_fail_immediate_deva.cpp  write_fail_immediate_devb.cpp  write_retry.cpp
src/raid/raid1/tests/async/: CMakeLists.txt  async_raid1_common.hpp  bitmap.cpp  degraded.cpp  discard.cpp  failover.cpp  flush.cpp  raid1_async_test.cpp  read_write.cpp
src/raid/raid1/tests/asyncio/: CMakeLists.txt  async_raid1_common.hpp  bitmap.cpp  degraded.cpp  discard.cpp  failover.cpp  failover_stale_iov.cpp  flush.cpp  idle.cpp  read_fail_degraded_dirty.cpp  read_write.cpp  retry.cpp  write_backup_fail_degrade_fail.cpp
src/raid/raid1/tests/bitmap/: CMakeLists.txt  become_clean.cpp  calc_regions.cpp  calculate_memory.cpp  clean_bitmap.cpp  clean_region.cpp  concurrent_io_resync.cpp  cross_page.cpp  init_bitmap.cpp  is_dirty.cpp  load_bitmap.cpp  load_fail.cpp  mismatched.cpp  multiword.cpp  next_dirty.cpp  region_tracker_test.cpp  resync_probe_mirror.cpp  roundtrip_sync_load.cpp  super_bitmap_test.cpp  sync_to_batching.cpp  sync_to_crash_scenarios.cpp  update_fail.cpp
src/raid/raid1/tests/concurrency/: CMakeLists.txt  api_calls_during_swap.cpp  async_resync_iouring.cpp  concurrent_enqueue_dequeue.cpp  concurrent_launch.cpp  concurrent_swap_io.cpp  failover_retry_during_swap.cpp  idle_state_bitmap_race.cpp  io_during_swap.cpp  multi_queue_idle.cpp  multi_reader_swap.cpp  resync_cursor_test.cpp  resync_relaunch_after_complete.cpp  stop_during_unavail_wait.cpp  write_resync_no_pause.cpp
src/raid/raid1/tests/failures/: CMakeLists.txt  become_degraded_sb_fail.cpp  immediate_fail_sb_update_fail.cpp  read_degraded.cpp  unknown_op.cpp  write_bitmap_race.cpp  write_fail.cpp
src/raid/tests/: CMakeLists.txt  raid0_test.cpp  raid1_bitmap_cross_page.cpp  raid1_bitmap_update_fail.cpp  raid1_retry_failure_deva.cpp  raid1_simple_syncio.cpp  raid1_syncio_fail_sb_update.cpp  raid1_test.cpp  raid1_write_fail_immediate_devb.cpp  raid_test_common.hpp  test_disk.hpp  test_raid0.cpp  test_raid1.cpp  test_raid1_common.hpp  test_raid1_read.cpp  test_raid1_write.cpp
src/raid/tests/raid0/: CMakeLists.txt  device_probe.cpp  device_probe_differ.cpp  discard_merge.cpp  discard_retry.cpp  open_devices.cpp  split_retry.cpp  test_raid0_common.hpp  tests.cpp  tuple_tests.cpp
src/raid/tests/raid1/: CMakeLists.txt  device_probe.cpp  device_probe_differ.cpp  device_probe_exceed.cpp  discard_retry.cpp  discard_retry_large.cpp  double_retry.cpp  flush_retry.cpp  immediate_fail_sb_update_fail.cpp  open_devices.cpp  read_degraded.cpp  read_failover.cpp  read_retry_deva.cpp  read_retry_devb.cpp  retry_deva.cpp  retry_devb.cpp  test_raid1_common.hpp  unknown_op.cpp  write_fail_immediate_deva.cpp
src/tests/: CMakeLists.txt  test_disk.hpp
src/tests/fio_engine/: CMakeLists.txt  ublkpp_fio_engine.cpp
src/tests/fio_engine/jobs/: fsdisk_rw.fio  iscsi_raid10_rw.fio  iscsi_rw.fio  raid0_cross_stripe.fio  raid0_rw.fio  raid10_cross_stripe.fio  raid10_rw.fio  raid1_rw.fio
src/tests/mock_ublksrv/: CMakeLists.txt  mock_ublksrv.cpp  mock_ublksrv.hpp
(+129 files in other folders)
